# simple485-remastered

./: .gitignore  README.md  pyproject.toml
common/: README.md  custom_logger.py
src/: __init__.py  core.py  master.py  models.py  node.py  slave.py  threaded_master.py
src/simple485_remastered/: __init__.py  core.py  exceptions.py  master.py  models.py  node.py  protocol.py  slave.py  threaded_master.py  utils.py
test_scripts/: README.md
test_scripts/address_range_test/: README.md  address_range_test_master.py  address_range_test_slave.py  threaded_address_range_test_master.py
test_scripts/storm_test/: README.md  storm_test_master.py  storm_test_slave.py  threaded_storm_test_master.py
tests/: README.md  conftest.py  test_master_slave.py  test_protocol.py  test_threaded_master.py
